--- a/index.html
+++ b/index.html
@@ -385,49 +385,53 @@
                 </ul>
             </div>
         </section>
-        <section class="online">
-            <h2 class="online-title section-title">Онлайн-запись</h2>
-            <form action="#" class="online-form">
-                <div class="online-input-wrap">
-                    <input type="text" 
-                        name="online-name"
-                        placeholder="Имя*" 
-                        class="online-input"
-                        required
-                        />
-                    <input type="tel" 
-                        name="online-tel"
-                        placeholder="Телефон*" 
-                        class="online-input"
-                        required 
-                        />
-                </div>
-                <textarea name="online-text" 
-                    class="online-text" 
-                    placeholder="сообщение">
-                </textarea>
-                <button type="submit" class="btn online-btn">отправить</button>
-            </form>
-        </section>
-        <section class="contacts">
-            <h2 class="contacts-title section-title">Контакты</h2>
-            <address class="contacts-address">
-                <ul class="contacts-list list">
-                    <li class="contacts-item">
-                        <a class="contacts-link link" href="https://goo.gl/maps/5Fsen3EQHM8j56xj8" target="_blank"
-                            rel="noopener noreferrer">ул. Васильковая, 7А Киев, 08132</a>
-                    </li>
-                    <li class="contacts-item">
-                        <a class="contacts-link link" href="tel:+380441111111">+38 044 111 11 11</a>
-                    </li>
-                    <li class="contacts-item">
-                        <a class="contacts-link" href="mailto:barbershop@email.com">barbershop@email.com</a>
-                    </li>
-                </ul>
-            </address>
-            <p class="contacts-bottom-title">время работы</p>
-            <p class="contacts-bottom-text">Ежедневно с 9:00 до 22:00</p>
-        </section>
+        <div class="contact-wrapp">
+            <div class="container">
+                <section class="online">
+                    <h2 class="online-title section-title">Онлайн-запись</h2>
+                    <form action="#" class="online-form">
+                        <div class="online-input-wrap">
+                            <input type="text" 
+                                name="online-name"
+                                placeholder="Имя*" 
+                                class="online-input"
+                                required
+                                />
+                            <input type="tel" 
+                                name="online-tel"
+                                placeholder="Телефон*" 
+                                class="online-input"
+                                required 
+                                />
+                        </div>
+                        <textarea name="online-text" 
+                            class="online-text" 
+                            placeholder="сообщение">
+                        </textarea>
+                        <button type="submit" class="btn online-btn">отправить</button>
+                    </form>
+                </section>
+                <section class="contacts">
+                    <h2 class="contacts-title section-title">Контакты</h2>
+                    <address class="contacts-address">
+                        <ul class="contacts-list list">
+                            <li class="contacts-item">
+                                <a class="contacts-link link" href="https://goo.gl/maps/5Fsen3EQHM8j56xj8" target="_blank"
+                                    rel="noopener noreferrer">ул. Васильковая, 7А Киев, 08132</a>
+                            </li>
+                            <li class="contacts-item">
+                                <a class="contacts-link link" href="tel:+380441111111">+38 044 111 11 11</a>
+                            </li>
+                            <li class="contacts-item">
+                                <a class="contacts-link" href="mailto:barbershop@email.com">barbershop@email.com</a>
+                            </li>
+                        </ul>
+                    </address>
+                    <p class="contacts-bottom-title pre-title">время работы</p>
+                    <p class="contacts-bottom-text">Ежедневно с 9:00 до 22:00</p>
+                </section>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <p class="footer-copy">&copy; Copyright 2020</p>
