--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
             </section>
         <section class="masters" id="masters">
-            <div class="container">
+            <div class="container masters-container">
                 <p class="masters-pre-title pre-title">
                     для настоящих ценителей атмосферы
                 </p>
@@ -434,15 +434,17 @@
         </div>
     </main>
     <footer class="footer">
-        <p class="footer-copy">&copy; Copyright 2020</p>
-        <ul class="footer-list list">
-            <li class="footer-item">
-                <a href="" class="footer-link link">Instagram</a>
-            </li>
-            <li class="footer-item">
-                <a href="" class="footer-link link">Youtube</a>
-            </li>
-        </ul>
+        <div class="container footer-container">
+            <p class="footer-copy">&copy; Copyright 2020</p>
+            <ul class="footer-list list pre-title">
+                <li class="footer-item">
+                    <a href="" class="footer-link link">Instagram</a>
+                </li>
+                <li class="footer-item">
+                    <a href="" class="footer-link link">Youtube</a>
+                </li>
+            </ul>
+        </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
