--- a/index.html
+++ b/index.html
@@ -418,13 +418,26 @@
                         <ul class="contacts-list list">
                             <li class="contacts-item">
                                 <a class="contacts-link link" href="https://goo.gl/maps/5Fsen3EQHM8j56xj8" target="_blank"
-                                    rel="noopener noreferrer">ул. Васильковая, 7А Киев, 08132</a>
+                                    rel="noopener noreferrer">
+                                    <p class="adress-text">
+                                        <svg class="contacts-icon" width="24" height="24">
+                                            <use href="./img/icons.svg#icon-map-pin"></use>
+                                        </svg>
+                                        ул. Васильковая, 7А Киев, 08132</p></a>
                             </li>
                             <li class="contacts-item">
-                                <a class="contacts-link link" href="tel:+380441111111">+38 044 111 11 11</a>
+                                <a class="contacts-link link" href="tel:+380441111111">
+                                        <svg class="contacts-icon" width="24" height="24">
+                                            <use href="./img/icons.svg#icon-phone"></use>
+                                        </svg>
+                                    +38 044 111 11 11</a>
                             </li>
                             <li class="contacts-item">
-                                <a class="contacts-link" href="mailto:barbershop@email.com">barbershop@email.com</a>
+                                <a class="contacts-link" href="mailto:barbershop@email.com">
+                                        <svg class="contacts-icon" width="24" height="24">
+                                            <use href="./img/icons.svg#icon-mail"></use>
+                                        </svg>
+                                    barbershop@email.com</a>
                             </li>
                         </ul>
                     </address>
