--- a/index.html
+++ b/index.html
@@ -29,26 +29,86 @@
                     <use href="./img/icons.svg#icon-logo"></use>
                 </svg>
             </a>
+            <div class="btn-up btn-up_hide"></div>
+            <button class ="open-menu-btn" data-mobile-menu-open>
+                <svg class="menu-burger"
+                    width="24"
+                    height="16">
+                    <use href="./img/icons.svg#icon-menu"></use>
+                </svg>    
+            </button>
             <ul class="header-list list">
                 <li class="header-item">
-                    <a href="" class="header-link link current">О нас</a>
+                    <a data-goto=".about" href="#" class="header-link link nav-link">О нас</a>
                 </li>
                 <li class="header-item">
-                    <a href="" class="header-link link">Услуги и цены</a>
+                    <a data-goto=".prices" href="#" class="header-link link nav-link">Услуги и цены</a>
                 </li>
                 <li class="header-item">
-                    <a href="#masters" class="header-link link">Мастера</a>
+                    <a data-goto=".masters" href="#" class="header-link link nav-link">Мастера</a>
                 </li>
                 <li class="header-item">
-                    <a href="" class="header-link link">Контакты</a>
+                    <a data-goto=".footer" href="#" class="header-link link nav-link">Контакты</a>
                 </li>
             </ul>
         </nav>
         <div class="header-connect">
+                        <button class="header-btn btn" type="button" data-modal-open>
+                            онлайн-запись</button>
             <a class="header-tel link" href="tel:+380441111111">
                 +38 044 111 11 11</a>
-            <button class="header-btn btn" type="button" data-modal-open>онлайн-запись</button>
+
         </div>
+            <div class="mob-menu is-hidden" data-mobile-menu>
+                <div class="container mob-menu-container">
+                    <div class="mob-menu-top">
+                        <button class="close-menu-btn" data-mobile-menu-close>
+                            <svg class="menu-close"
+                            width="30"
+                            height="30">
+                            <use href="./img/icons.svg#icon-close"></use>
+                </svg>    
+                        </button>
+                        <ul class="mob-menu-list list">
+                            <li class="mob-menu-item">
+                                <a data-goto=".about" href="#" class="mob-menu-link link nav-link">О нас</a>
+                            </li>
+                            <li class="mob-menu-item">
+                                <a data-goto=".prices" href="#" class="mob-menu-link link nav-link">Услуги и цены</a>
+                            </li>
+                            <li class="mob-menu-item">
+                                <a data-goto=".masters" href="#" class="mob-menu-link link nav-link">Мастера</a>
+                            </li>
+                            <li class="mob-menu-item">
+                                <a data-goto=".footer" href="#" class="mob-menu-link link nav-link">Контакты</a>
+                            </li>
+                        </ul>
+                    </div>
+                        <div class="mob-menu-bottom">
+                            <div class="mob-menu-connect">
+                                <a class="mob-menu-tel link" 
+                                    href="tel:+380441111111">+38 044 111 11 11
+                                </a>
+                                <button class="mob-menu-btn btn" 
+                                    type="button" data-modal-open>
+                                    онлайн-запись
+                                </button>
+                            </div>
+                        </div>
+                            <ul class="mob-social-list list">
+                                <li class="mob-social-item">
+                                    <a href="http://instagram.com" class="mob-social-link link pre-link"
+                                        >Instagram
+                                        </a>
+                                </li>
+                                <li class="mob-social-item">
+                                    <a href="http://youtube.com" class="mob-social-link link second"
+                                        >Youtube
+                                    </a>
+                                </li>
+                        </ul>                           
+                </div>
+            </div>
         </div>
     </header>
     <main>
@@ -80,10 +140,30 @@
             <div class="container about-container">
                 <ul class="about-list list">
                     <li class="about-item">
+                        <picture>
+                            <source srcset="
+                                ./img/about-img-1.jpg 1x,
+                                ./img/about-img-1-2x.jpg 2x
+                                " media="(min-width:1200px)" />
+                            <source srcset="
+                                ./img/about-img-1-tab.jpg 1x,
+                                ./img/about-img-1-tab-2x.jpg 2x
+                                " media="(min-width:768px)" />
                         <img src="./img/about-img-1.jpg" alt="барбер бреет бороду" width="270" height="445" />
+                        </picture>
                     </li>
                     <li class="about-item">
-                        <img src="./img/about-img-2.jpg" alt="барбер делает кантик" width="270" height="445" />
+                        <picture>
+                            <source srcset="
+                                ./img/about-img-2.jpg 1x,
+                                ./img/about-img-2-2x.jpg 2x
+                                " media="(min-width:1200px)" />
+                            <source srcset="
+                                ./img/about-img-2-tab.jpg 1x,
+                                ./img/about-img-2-tab-2x.jpg 2x
+                                " media="(min-width:768px)" />
+                        <img src="./img/about-img-2.jpg" alt="барбер бреет бороду" width="270" height="445" />
+                        </picture>
                     </li>
                 </ul>
                 <div class="about-right">
@@ -101,7 +181,7 @@
                         Поэтому, мы всегда готовы усовершенствовать каждого, кто
                         к нам приходит!
                     </p>
-                    <button type="button" class="about-btn btn">
+                    <button type="button" class="about-btn btn" data-modal-open>
                         онлайн-запись
                     </button>
                 </div>
@@ -169,7 +249,7 @@
                         </li>
                     </ul>
                 </div>
-                <button type="button" class="prices-btn btn"  data-modal-open>онлайн-запись</button>
+                <button type="button" class="prices-btn btn" data-modal-open>онлайн-запись</button>
             </div>
         </section>
             <section class="reasons">
@@ -372,16 +452,72 @@
                 <h2 class="visually-hidden">Галерея</h2>
                 <ul class="gallery-list list">
                     <li class="gallery-item">
-                        <img src="./img/gallery-img-1.jpg" alt="барбер стрежет клиента" width="270" height="360" />
+                    <picture>
+                        <source srcset="
+                                ./img/gallery-img-1.jpg 1x,
+                                ./img/gallery-img-1-2x.jpg 2x
+                                " media="(min-width:1200px)" />
+                        <source srcset="
+                                ./img/gallery-img-1-tab.jpg 1x,
+                                ./img/gallery-img-1-tab-2x.jpg 2x
+                                " media="(min-width:768px)" />
+                        <source srcset="
+                                ./img/gallery-img-1-mob.jpg 1x,
+                                ./img/gallery-img-1-mob-2x.jpg 2x
+                                " media="(min-width:320px)" />
+                        <img src="./img/gallery-img-1.jpg" alt="барбер стрежет клиента" />
+                        </picture>
                     </li>
                     <li class="gallery-item">
-                        <img src="./img/gallery-img-2.jpg" alt="барбер стрежет клиента" width="270" height="360" />
+                        <picture>
+                            <source srcset="
+                                    ./img/gallery-img-2.jpg 1x,
+                                    ./img/gallery-img-2-2x.jpg 2x
+                                    " media="(min-width:1200px)" />
+                            <source srcset="
+                                    ./img/gallery-img-2-tab.jpg 1x,
+                                    ./img/gallery-img-2-tab-2x.jpg 2x
+                                    " media="(min-width:768px)" />
+                            <source srcset="
+                                    ./img/gallery-img-2-mob.jpg 1x,
+                                    ./img/gallery-img-2-mob-2x.jpg 2x
+                                    " media="(min-width:320px)" />
+                            <img src="./img/gallery-img-2.jpg" alt="барбер стрежет клиента" />
+                        </picture>
                     </li>
                     <li class="gallery-item">
-                        <img src="./img/gallery-img-3.jpg" alt="барбер стрежет клиента" width="270" height="360" />
+                        <picture>
+                            <source srcset="
+                                    ./img/gallery-img-3.jpg 1x,
+                                    ./img/gallery-img-3-2x.jpg 2x
+                                    " media="(min-width:1200px)" />
+                            <source srcset="
+                                    ./img/gallery-img-3-tab.jpg 1x,
+                                    ./img/gallery-img-3-tab-2x.jpg 2x
+                                    " media="(min-width:768px)" />
+                            <source srcset="
+                                    ./img/gallery-img-3-mob.jpg 1x,
+                                    ./img/gallery-img-3-mob-2x.jpg 2x
+                                    " media="(min-width:320px)" />
+                            <img src="./img/gallery-img-3.jpg" alt="барбер стрежет клиента" />
+                        </picture>
                     </li>
                     <li class="gallery-item">
-                        <img src="./img/gallery-img-4.jpg" alt="барбер стрежет клиента" width="270" height="360" />
+                        <picture>
+                            <source srcset="
+                                    ./img/gallery-img-4.jpg 1x,
+                                    ./img/gallery-img-4-2x.jpg 2x
+                                    " media="(min-width:1200px)" />
+                            <source srcset="
+                                    ./img/gallery-img-4-tab.jpg 1x,
+                                    ./img/gallery-img-4-tab-2x.jpg 2x
+                                    " media="(min-width:768px)" />
+                            <source srcset="
+                                    ./img/gallery-img-4-mob.jpg 1x,
+                                    ./img/gallery-img-4-mob-2x.jpg 2x
+                                    " media="(min-width:320px)" />
+                            <img src="./img/gallery-img-4.jpg" alt="барбер стрежет клиента" />
+                        </picture>
                     </li>
                 </ul>
             </div>
@@ -452,10 +588,10 @@
             <p class="footer-copy">&copy; Copyright 2020</p>
             <ul class="footer-list list pre-title">
                 <li class="footer-item">
-                    <a href="" class="footer-link link">Instagram</a>
+                    <a href="http://instagram.com" class="footer-link link">Instagram</a>
                 </li>
                 <li class="footer-item">
-                    <a href="" class="footer-link link">Youtube</a>
+                    <a href="http://youtube.com" class="footer-link link">Youtube</a>
                 </li>
             </ul>
         </div>
@@ -519,13 +655,12 @@
 
     <button type="submit" class="btn modal-btn">
             submit
-        <svg class="input-btn-icon" width="18" height="18">
-            <use href="./images/icons.svg#icon-phone-black"></use>
-        </svg>
     </button>
 </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/navigation.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
