--- a/index.html
+++ b/index.html
@@ -305,9 +305,23 @@
                 <h2 class="masters-title section-title">Наши мастера</h2>
                 <ul class="masters-list list">
                     <li class="masters-item">
+                         <picture>
+                            <source srcset="
+                                ./img/masters-img-1.jpg 1x,
+                                ./img/masters-img-1-2x.jpg 2x
+                                " media="(min-width:1200px)" />
+                            <source srcset="
+                                ./img/masters-img-1-tab.jpg 1x,
+                                ./img/masters-img-1-tab-2x.jpg 2x
+                                " media="(min-width:768px)" /> 
+                             <source srcset="
+                                ./img/masters-img-1-mob.jpg 1x,
+                                ./img/masters-img-1-mob-2x.jpg 2x
+                                " media="(min-width:320px)" />
                         <img src="./img/masters-img-1.jpg" 
                             alt="барбер стрежет клиента" 
                             width="370" height="346" />
+                        </picture>
                         <div class="masters-item-content">
                             <h3 lang="en" class="masters-item-title">
                                 John Smith
@@ -356,9 +370,21 @@
                         </div>
                     </li>
                     <li class="masters-item">
-                        <img src="./img/masters-img-2.jpg" 
-                            alt="барбер стрежет клиента" 
-                            width="370" height="346" />
+                        <picture>
+                            <source srcset="
+                                ./img/masters-img-2.jpg 1x,
+                                ./img/masters-img-2-2x.jpg 2x
+                                " media="(min-width:1200px)" />
+                            <source srcset="
+                                ./img/masters-img-2-tab.jpg 1x,
+                                ./img/masters-img-2-tab-2x.jpg 2x
+                                " media="(min-width:768px)" />
+                            <source srcset="
+                                ./img/masters-img-2-mob.jpg 1x,
+                                ./img/masters-img-2-mob-2x.jpg 2x
+                                " media="(min-width:320px)" />
+                            <img src="./img/masters-img-2.jpg" alt="барбер стрежет клиента" width="370" height="346" />
+                        </picture>
                         <div class="masters-item-content">   
                             <h3 lang="en" class="masters-item-title">
                                 Michele Doe
@@ -399,9 +425,21 @@
                         </div>
                     </li>
                     <li class="masters-item">
-                        <img src="./img/masters-img-3.jpg" 
-                            alt="барбер стрежет клиента" 
-                            width="370" height="346" />
+                        <picture>
+                            <source srcset="
+                                ./img/masters-img-3.jpg 1x,
+                                ./img/masters-img-3-2x.jpg 2x
+                                " media="(min-width:1200px)" />
+                            <source srcset="
+                                ./img/masters-img-3-tab.jpg 1x,
+                                ./img/masters-img-3-tab-2x.jpg 2x
+                                " media="(min-width:768px)" />
+                            <source srcset="
+                                ./img/masters-img-3-mob.jpg 1x,
+                                ./img/masters-img-3-mob-2x.jpg 2x
+                                " media="(min-width:320px)" />
+                            <img src="./img/masters-img-3.jpg" alt="барбер стрежет клиента" width="370" height="346" />
+                        </picture>
                         <div class="masters-item-content">
                             <h3 lang="en" class="masters-item-title">
                                 Alan Black
@@ -522,8 +560,7 @@
                 </ul>
             </div>
         </section>
-        <div class="contact-wrapp">
-            <div class="container">
+            <div class="container online-container">
                 <section class="online">
                     <h2 class="online-title section-title">Онлайн-запись</h2>
                     <form action="#" class="online-form">
@@ -543,13 +580,14 @@
                         </div>
                         <textarea name="online-text" 
                             class="online-text" 
-                            placeholder="сообщение">
+                            placeholder="Cообщение*">
                         </textarea>
                         <button type="submit" class="btn online-btn">отправить</button>
                     </form>
                 </section>
                 <section class="contacts">
                     <h2 class="contacts-title section-title">Контакты</h2>
+                    <div class="contact-wrap">
                     <address class="contacts-address">
                         <ul class="contacts-list list">
                             <li class="contacts-item">
@@ -577,8 +615,11 @@
                             </li>
                         </ul>
                     </address>
+                    <div class="address-wrap">
                     <p class="contacts-bottom-title pre-title">время работы</p>
                     <p class="contacts-bottom-text">Ежедневно с 9:00 до 22:00</p>
+                    </div>
+                </div>
                 </section>
             </div>
         </div>
