--- a/index.html
+++ b/index.html
@@ -30,13 +30,7 @@
                 </svg>
             </a>
             <div class="btn-up btn-up_hide"></div>
-            <button class ="open-menu-btn" data-mobile-menu-open>
-                <svg class="menu-burger"
-                    width="24"
-                    height="16">
-                    <use href="./img/icons.svg#icon-menu"></use>
-                </svg>    
-            </button>
+           
             <ul class="header-list list">
                 <li class="header-item">
                     <a data-goto=".about" href="#" class="header-link link nav-link">О нас</a>
@@ -57,7 +51,11 @@
                             онлайн-запись</button>
             <a class="header-tel link" href="tel:+380441111111">
                 +38 044 111 11 11</a>
-
+            <button class="open-menu-btn" data-mobile-menu-open>
+                <svg class="menu-burger" width="24" height="16">
+                    <use href="./img/icons.svg#icon-menu"></use>
+                </svg>
+            </button>
         </div>
             <div class="mob-menu is-hidden" data-mobile-menu>
                 <div class="container mob-menu-container">
