mob menu and modal fix

--- a/index.html
+++ b/index.html
@@ -57,56 +57,58 @@
                 </svg>
             </button>
         </div>
-            <div class="mob-menu is-hidden" data-mobile-menu>
-                <div class="container mob-menu-container">
-                    <div class="mob-menu-top">
-                        <button class="close-menu-btn" data-mobile-menu-close>
-                            <svg class="menu-close"
-                            width="30"
-                            height="30">
-                            <use href="./img/icons.svg#icon-close"></use>
-                </svg>    
-                        </button>
-                        <ul class="mob-menu-list list">
-                            <li class="mob-menu-item">
-                                <a data-goto=".about" href="#" class="mob-menu-link link nav-link">О нас</a>
-                            </li>
-                            <li class="mob-menu-item">
-                                <a data-goto=".prices" href="#" class="mob-menu-link link nav-link">Услуги и цены</a>
-                            </li>
-                            <li class="mob-menu-item">
-                                <a data-goto=".masters" href="#" class="mob-menu-link link nav-link">Мастера</a>
-                            </li>
-                            <li class="mob-menu-item">
-                                <a data-goto=".footer" href="#" class="mob-menu-link link nav-link">Контакты</a>
-                            </li>
-                        </ul>
-                    </div>
-                        <div class="mob-menu-bottom">
-                            <div class="mob-menu-connect">
-                                <a class="mob-menu-tel link" 
-                                    href="tel:+380441111111">+38 044 111 11 11
-                                </a>
-                                <button class="mob-menu-btn btn" 
-                                    type="button" data-modal-open>
-                                    онлайн-запись
-                                </button>
-                            </div>
+            <div class="backdrop is-hidden" data-mobile-menu>
+                <div class="mob-menu" >
+                    <div class="container mob-menu-container">
+                        <div class="mob-menu-top">
+                            <button class="close-menu-btn" data-mobile-menu-close>
+                                <svg class="menu-close"
+                                width="30"
+                                height="30">
+                                <use href="./img/icons.svg#icon-close"></use>
+                    </svg>    
+                            </button>
+                            <ul class="mob-menu-list list">
+                                <li class="mob-menu-item">
+                                    <a data-goto=".about" href="#" class="mob-menu-link link nav-link">О нас</a>
+                                </li>
+                                <li class="mob-menu-item">
+                                    <a data-goto=".prices" href="#" class="mob-menu-link link nav-link">Услуги и цены</a>
+                                </li>
+                                <li class="mob-menu-item">
+                                    <a data-goto=".masters" href="#" class="mob-menu-link link nav-link">Мастера</a>
+                                </li>
+                                <li class="mob-menu-item">
+                                    <a data-goto=".footer" href="#" class="mob-menu-link link nav-link">Контакты</a>
+                                </li>
+                            </ul>
                         </div>
-                            <ul class="mob-social-list list">
-                                <li class="mob-social-item">
-                                    <a href="http://instagram.com" class="mob-social-link link pre-link"
-                                        >Instagram
-                                        </a>
-                                </li>
-                                <li class="mob-social-item">
-                                    <a href="http://youtube.com" class="mob-social-link link second"
-                                        >Youtube
+                            <div class="mob-menu-bottom">
+                                <div class="mob-menu-connect">
+                                    <a class="mob-menu-tel link" 
+                                        href="tel:+380441111111">+38 044 111 11 11
                                     </a>
-                                </li>
-                        </ul>                           
+                                    <button class="mob-menu-btn btn" 
+                                        type="button" data-modal-open>
+                                        онлайн-запись
+                                    </button>
+                                </div>
+                            </div>
+                                <ul class="mob-social-list list">
+                                    <li class="mob-social-item">
+                                        <a href="http://instagram.com" class="mob-social-link link pre-link"
+                                            >Instagram
+                                            </a>
+                                    </li>
+                                    <li class="mob-social-item">
+                                        <a href="http://youtube.com" class="mob-social-link link second"
+                                            >Youtube
+                                        </a>
+                                    </li>
+                            </ul>                           
+                    </div>
                 </div>
-            </div>
+          </div>
         </div>
     </header>
     <main>
