--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
             </div>
         </section>
         <section class="prices">
-            <div class="container">
+            <div class="container prices-container">
                 <p class="prices-pre-title pre-title">
                     Проведи время в компании лучших мастеров
                 </p>
@@ -950,7 +950,7 @@
         </div>
   
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal >
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="close-icon" width="18" height="18">
